graalvm build test